--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 :root
 {
-  --yellow: #F5C32C;
-    --orange : #FCA61F;
+  --yellow: #1DBF73;
+    --orange : #1DBF73;
     --black : #242D49;
     --gray : #788097;
     --blueCard : #DDF8FE;
     --purple: rgb(238 210 255);
     --boxShadow : 0px 19px 60px rgb(0 0 0 / 8%);
-    --orangeCard: rgba(252, 166, 31, 0.45);
+    --orangeCard: #59be8f;
     --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
 }
 
@@ -18,19 +18,20 @@
 }
 
 .button {
-    background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
-    box-shadow: 0px 20px 24px 3px rgba(251, 161, 40, 0.42);
+    background: linear-gradient(180deg, #1DBF73 26.71%, #013912 99.36%);
+    /* box-shadow: 0px 2px 34px 3px #59be8f; */
     border-radius: 34px;
     border: none;
     color: white;
     font-size: 16px;
     padding: 11px 26px 11px 26px;
+    transition: all .3s;
   }
   
   .button:hover {
     background: white;
     cursor: pointer;
-    border: 1px solid var(--orange);
+    outline: 1px solid var(--orange);
     color: var(--orange);
   }
   @media screen and (max-width: 480px) {
