--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -29,7 +29,7 @@
 }
 .i-name > :nth-child(3) {
   font-weight: 100;
-  font-size: 14px;
+  font-size: 24px;
   color: var(--gray);
   margin-top: 10px;
 }
@@ -41,6 +41,7 @@
   margin-top: 3rem;
   display: flex;
   gap: 0rem;
+  color: #1dbf73;
 }
 .i-icons > * {
   transform: scale(0.5);
