--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -22,7 +22,7 @@
   font-weight: bold;
 }
 .awesome > :nth-child(2) {
-  color: var(--orange);
+  color: #1DBF73;
   font-size: 2.5rem;
   font-weight: bold;
 }
