--- a/src/components/Testimonials/Testimonial.css
+++ b/src/components/Testimonials/Testimonial.css
@@ -17,7 +17,7 @@
     font-weight: bold;
 }
 .t-heading span:nth-of-type(2){
-    color: var(--orange);
+    color: #1DBF73;
 }
 
 .t-blur1{
@@ -46,6 +46,7 @@
     width: 6rem;
     height: 6rem;
     border-radius: 100%;
+    object-fit: cover;
 }
 .testimonial>span{
     color: var(--gray);
