--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -20,7 +20,7 @@
   font-weight: bold;
 }
 .awesome > :nth-child(2) {
-  color: var(--orange);
+  color: #1DBF73;
   font-size: 2.5rem;
   font-weight: bold;
 }
@@ -107,7 +107,7 @@
   top: 0rem;
 }
 .yellowCircle {
-  background: #f5c32c;
+  background: #1DBF73;
   left: 18rem;
   top: 8rem;
 }
